assets/css/card.css
/* Card styling */
.card {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    position: relative;
    background-color: #111111;
    border: 2px solid #000000;
    border-radius: 8px;
    padding: 10px 20px 10px 20px;
    margin-right: 10px;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    color: inherit;
    width: fit-content;
    max-width: 100%;
}

/* Hover effect */
.card:hover {
    transform: translateY(-5px);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    background-color: #000000;
}

/* Content styling */
.card-content {
    display: flex;
    flex-direction: column;
    flex-grow: 1; /* Allows content to take available space */
}

/* Description styling */
.card-description {
    margin: 8px 0 0;
    color: #ffffff;
}

.card h3 {
    padding-top: 2px;
}

/* Title styling */
.card-title {
    margin: 0;
    font-size: 1.5rem;
    color: #ffffff;
}





.card-button-content {
    display: flex;
    flex-direction: row;
    flex-grow: 1; /* Allows content to take available space */
}

/* Title styling */
.card-button-title {
    margin-top: 5px;
    margin-bottom: 0;
    font-size: 1.5rem;
    color: #ffffff;
    line-height: 1;
    display: flex;
    align-items: center;
    height: 100%;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.button-icon {
    width: 40px;
    height: auto;
    padding-left: 5px;
    padding-right: 10px;
  }

  /* "Go to link" icon styling */
.go-to-link-icon {
    width: 40px;
    height: auto;
    padding-left: 5px;
}

 /* Stretched link to make the entire card clickable */
 .stretched-link {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 1;
    text-decoration: none; /* Removes underline */
}

.button-container {
    display: flex;
    flex-wrap: wrap;
    gap: 10px; /* Adjust spacing between buttons as needed */
    padding-top: 20px
}
  
.copy-link-button {
    background: none;
    border: none;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center; /* Centers content */
    position: absolute; /* Makes it cover the whole card */
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    z-index: 2; /* Ensures it is above other elements */
    text-decoration: none;
}

/* Media query for screens smaller than 600px */
@media (max-width: 600px) {
    .button-container {
      flex-direction: column;
      align-items: center;
    }
}








.gallery {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
    gap: 2rem;
    padding: 1rem;
    max-width: 100%;
    height: auto;
    justify-content: center;
    align-items: center;
}

@media (max-width: 600px) {
    .gallery {
        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
    }
}

.banner img:not(.banner-logo) {
    width: 100%;
    height: auto;
    border-radius: 10px;
    max-width: 100%;
    border: 3px solid #ffae00;
}

.banner-logo {
    position: absolute;
    top: -6px;
    right: -1px;
    width: 90px;
    min-width: 90px;
    height: auto;
    border-radius: 10px;
    border: 2px solid #ffae00;
}

.banner {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    max-width: 100%;
    height: auto;
    background-color: #111111;
    padding: 10px;
    padding-right: 15px;
    padding-top: 20px;
    border-radius: 10px;
    perspective: 1000px;
    border: 1px solid #ffffff50;
}

.banner-inner {
    width: 100%;
    height: 100%;
    position: relative;
    transform-style: preserve-3d;
    transition: transform 0.6s;
}

.banner.flip .banner-inner {
    transform: rotateY(180deg);
}

/* Front and Back Styles */
.banner-front {
    position: relative;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    backface-visibility: hidden;
    cursor: pointer;
}

/* Back side rotates */
.banner-back {
    position: absolute;
    top: -0.4rem;
    padding-left: 10px;
    padding-right: 7px;
    width: 100%;
    height: 100%;
    background-color: #222;
    color: white;
    border-radius: 10px;
    transform: rotateY(180deg);
    backface-visibility: hidden;
    box-sizing: border-box;
    cursor: pointer;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

.banner-back p {
    padding-top: 10px;
}

.banner .card, .banner .card:hover {
    width: 100%;
    padding: 0;
    padding-bottom: 10px;
    margin-top: 10px;
    justify-content: center;
    border: 2px solid #ffae00;
    transform: translateY(0px);
}

.banner-game-title {
    background: none;
    color: #ffffff;
    margin-top: -12px;
    margin-bottom: 20px;
    border-radius: 7px;
    padding-left: 10px;
    font-family: "Minecraft Ten", monospace;
    font-size: 1.5rem;
    height: fit-content;
    word-wrap: break-word;
    overflow-wrap: break-word;
    max-width: 70%;
    line-height: 1.5;
    display: block;
}

.banner-game-author {
    background: none;
    color: #ffffff;
    margin-top: -10px;
    margin-bottom: 22px;
    border-radius: 7px;
    padding-left: 10px;
    font-family: "Minecraft Regular", monospace;
    font-size: 1rem;
    height: fit-content;
    word-wrap: break-word;
    overflow-wrap: break-word;
    max-width: 70%;
}

body[data-path^="/projects"] .banner-front,
body[data-path^="/resources"] .banner-front,
body[data-path*="game-nights"] .banner-front {
    cursor: default;
}

body[data-path*="game-nights"] .banner-image {
    cursor: pointer;
}

body[data-path^="/resources"] .banner-game-title {
    margin-bottom: 25px;
}

body[data-path^="/resources"] .card,
body[data-path^="/resources"] .card:hover {
    margin-top: 0px;
    border: 2px solid #85b6ff;
}

body[data-path^="/resources"] .banner-image {
    border: 3px solid #85b6ff;
}

body[data-path^="/resources"] .banner-logo {
    border: 0px;
}

.banner-image {
    transition: transform 0.3s ease-in-out;
}

.banner-image.zoom-out {
    transform: scale(0.7);
}

.banner-image.zoom-in {
    transform: scale(1);
}

.video-container {
    cursor: pointer;
    background: #000;
    position: relative;
    width: 100%;
    aspect-ratio: 16 / 9; 
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    border-radius: 10px;
    border: 3px solid #ffae00;
    box-sizing: border-box;
}

.banner video,
.video-container video,
.creation-video {
    width: 100% !important;
    height: 100% !important;
    object-fit: contain;
    background: #000;

    border: 0px none transparent !important;
    outline: none !important;
    box-shadow: none !important;
    padding: 0 !important;
    margin: 0 !important;
}

.video-thumbnail {
    width: 100%;
    height: 100%;
    object-fit: cover; 
    display: block;
    border: none !important;
}

.video-thumbnail[src=""] {
  visibility: hidden;
}

.banner-wrapper {
    width: 100%;
    display: flex;
    flex-direction: column;
}

